@@ -10,6 +10,7 @@
 package org.elasticsearch.index.mapper;
 
 import org.apache.lucene.tests.util.LuceneTestCase;
+import org.elasticsearch.Build;
 import org.elasticsearch.core.Tuple;
 import org.elasticsearch.test.ESTestCase;
 import org.elasticsearch.xcontent.XContentBuilder;
@@ -18,23 +19,47 @@ import java.io.IOException;
 import java.util.ArrayList;
 import java.util.HashSet;
 import java.util.List;
-import java.util.Objects;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 public class KeywordFieldSyntheticSourceSupport implements MapperTestCase.SyntheticSourceSupport {
     private final Integer ignoreAbove;
     private final boolean allIgnored;
     private final boolean store;
-    private final boolean docValues;
+    private final FieldMapper.DocValuesParameter.Values docValues;
     private final String nullValue;
+    private final boolean allowIgnoredSource;
 
-    KeywordFieldSyntheticSourceSupport(Integer ignoreAbove, boolean store, String nullValue, boolean useFallbackSyntheticSource) {
+    KeywordFieldSyntheticSourceSupport(
+        Integer ignoreAbove,
+        boolean store,
+        String nullValue,
+        boolean allowIgnoredSource,
+        FieldMapper.DocValuesParameter.Values docValues
+    ) {
         this.ignoreAbove = ignoreAbove;
         this.allIgnored = ignoreAbove != null && LuceneTestCase.rarely();
         this.store = store;
         this.nullValue = nullValue;
-        this.docValues = useFallbackSyntheticSource == false || ESTestCase.randomBoolean();
+        this.allowIgnoredSource = allowIgnoredSource;
+        this.docValues = docValues;
+    }
+
+    public static FieldMapper.DocValuesParameter.Values randomDocValuesParams(boolean allowIgnoredSource) {
+        // TODO: Remove this case when FieldMapper.DocValuesParameter.EXTENDED_DOC_VALUES_PARAMS_FF is removed.
+        if (Build.current().isSnapshot() == false) {
+            if (allowIgnoredSource && ESTestCase.randomBoolean()) {
+                return FieldMapper.DocValuesParameter.Values.DISABLED;
+            } else {
+                return new FieldMapper.DocValuesParameter.Values(true, FieldMapper.DocValuesParameter.Values.Cardinality.LOW);
+            }
+        }
+
+        return switch (ESTestCase.randomInt(allowIgnoredSource ? 2 : 1)) {
+            case 0 -> new FieldMapper.DocValuesParameter.Values(true, FieldMapper.DocValuesParameter.Values.Cardinality.LOW);
+            case 1 -> new FieldMapper.DocValuesParameter.Values(true, FieldMapper.DocValuesParameter.Values.Cardinality.HIGH);
+            case 2 -> FieldMapper.DocValuesParameter.Values.DISABLED;
+            default -> throw new IllegalStateException();
+        };
     }
 
     @Override
@@ -46,23 +71,28 @@ public class KeywordFieldSyntheticSourceSupport implements MapperTestCase.Synthe
     public boolean preservesExactSource() {
         // We opt in into fallback synthetic source implementation
         // if there is nothing else to use, and it preserves exact source data.
-        return store == false && docValues == false;
+        return store == false && docValues.enabled() == false;
     }
 
     @Override
     public MapperTestCase.SyntheticSourceExample example(int maxValues) {
-        return example(maxValues, false);
+        return example(maxValues, false, false);
     }
 
-    public MapperTestCase.SyntheticSourceExample example(int maxValues, boolean loadBlockFromSource) {
+    public MapperTestCase.SyntheticSourceExample example(int maxValues, boolean loadBlockFromSource, boolean flipOrder) {
+        return example(maxValues, loadBlockFromSource, flipOrder, true);
+    }
+
+    public MapperTestCase.SyntheticSourceExample example(
+        int maxValues,
+        boolean loadBlockFromSource,
+        boolean flipOrder,
+        boolean ignoredValuesSorted
+    ) {
         if (ESTestCase.randomBoolean()) {
             Tuple<String, String> v = generateValue();
             Object sourceValue = preservesExactSource() ? v.v1() : v.v2();
-            Object loadBlock = v.v2();
-            if (loadBlockFromSource == false && ignoreAbove != null && v.v2().length() > ignoreAbove) {
-                loadBlock = null;
-            }
-            return new MapperTestCase.SyntheticSourceExample(v.v1(), sourceValue, loadBlock, this::mapping);
+            return new MapperTestCase.SyntheticSourceExample(v.v1(), sourceValue, this::mapping);
         }
         List<Tuple<String, String>> values = ESTestCase.randomList(1, maxValues, this::generateValue);
         List<String> in = values.stream().map(Tuple::v1).toList();
@@ -76,30 +106,27 @@ public class KeywordFieldSyntheticSourceSupport implements MapperTestCase.Synthe
                 validValues.add(v);
             }
         });
-        List<String> outputFromDocValues = new HashSet<>(validValues).stream().sorted().collect(Collectors.toList());
+        List<String> outputFromDocValues = new HashSet<>(validValues).stream().sorted().toList();
 
         Object out;
         if (preservesExactSource()) {
             out = in;
         } else {
+            // stored fields are not sorted
             var validValuesInCorrectOrder = store ? validValues : outputFromDocValues;
-            var syntheticSourceOutputList = Stream.concat(validValuesInCorrectOrder.stream(), ignoredValues.stream()).toList();
+            // when fallback fields use binary doc values, then ignored values are sorted
+            // however, when fallback fields use stored fields, then ignored values are not sorted
+            var ignoredValuesInCorrectOrder = ignoredValuesSorted ? ignoredValues.stream().sorted().toList() : ignoredValues;
+
+            // this is an ugly little hack that flips the order of ignored values, which is important for the text-family fields where the
+            // ordering of produced synthetic source values can be different from what was supplied
+            var syntheticSourceOutputList = flipOrder
+                ? Stream.concat(ignoredValuesInCorrectOrder.stream(), validValuesInCorrectOrder.stream()).toList()
+                : Stream.concat(validValuesInCorrectOrder.stream(), ignoredValuesInCorrectOrder.stream()).toList();
             out = syntheticSourceOutputList.size() == 1 ? syntheticSourceOutputList.get(0) : syntheticSourceOutputList;
         }
 
-        List<String> loadBlock;
-        if (loadBlockFromSource) {
-            // The block loader infrastructure will never return nulls. Just zap them all.
-            loadBlock = in.stream().filter(Objects::nonNull).toList();
-        } else if (docValues) {
-            loadBlock = List.copyOf(outputFromDocValues);
-        } else {
-            // Meaning loading from terms.
-            loadBlock = List.copyOf(validValues);
-        }
-
-        Object loadBlockResult = loadBlock.size() == 1 ? loadBlock.get(0) : loadBlock;
-        return new MapperTestCase.SyntheticSourceExample(in, out, loadBlockResult, this::mapping);
+        return new MapperTestCase.SyntheticSourceExample(in, out, this::mapping);
     }
 
     private Tuple<String, String> generateValue() {
@@ -125,8 +152,18 @@ public class KeywordFieldSyntheticSourceSupport implements MapperTestCase.Synthe
         if (store) {
             b.field("store", true);
         }
-        if (docValues == false) {
+
+        if (docValues.enabled() == false) {
             b.field("doc_values", false);
+        } else {
+            // TODO: Remove this case when FieldMapper.DocValuesParameter.EXTENDED_DOC_VALUES_PARAMS_FF is removed.
+            if (Build.current().isSnapshot() == false) {
+                b.field("doc_values", true);
+            } else {
+                b.startObject("doc_values");
+                b.field("cardinality", docValues.cardinality().toString());
+                b.endObject();
+            }
         }
     }
 
